Develop (#999)
* fixed link

* ES bugfix

* setup api docs

* apidocs fix

* Return the reason why the XML was not valid according to the XSD

* force download of RDF files

* add uploader to evaluation_list

* add user_id to name

* add to initial check

* list of user names

* add username tpl to views and remove from_id function

* remove extra brace

* add uploader to evaluations

* change uploader to user

* change uploader to user

* doc update

* doc update

* Delete swagger.json

* Delete swagger.yaml

* review comments

* add space

* extended error messages

* better error handling

* increase stat circles on cover page

* indentation changes

* two spaces

* fix code style
